// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericOption NumericOption renders as expected with default requirement 1`] = `
<div>
  <label
    className="select"
  >
    Requirement
    <select
      className="select-item"
      name="requirement"
      onClick={[Function]}
    >
      <option>
        Exact answer
      </option>
      <option>
        Margin of error
      </option>
      <option>
        Within a range
      </option>
    </select>
  </label>
  <label
    className="input"
  >
    Answer
    <input
      className="input-item"
      contentEditable={false}
      name="answer"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      value=""
    />
  </label>
</div>
`;

exports[`NumericOption NumericOption renders as expected with requirement of \`exact\` 1`] = `
<div>
  <label
    className="select"
  >
    Requirement
    <select
      className="select-item"
      name="requirement"
      onClick={[Function]}
      value="Exact answer"
    >
      <option>
        Exact answer
      </option>
      <option>
        Margin of error
      </option>
      <option>
        Within a range
      </option>
    </select>
  </label>
  <label
    className="input"
  >
    Answer
    <input
      className="input-item"
      contentEditable={false}
      name="answer"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      value=""
    />
  </label>
</div>
`;

exports[`NumericOption NumericOption renders as expected with requirement of \`margin\` 1`] = `
<div>
  <label
    className="select"
  >
    Requirement
    <select
      className="select-item"
      name="requirement"
      onClick={[Function]}
      value="Margin of error"
    >
      <option>
        Exact answer
      </option>
      <option>
        Margin of error
      </option>
      <option>
        Within a range
      </option>
    </select>
  </label>
  <label
    className="select"
  >
    Type
    <select
      className="select-item"
      name="type"
      onClick={[Function]}
    >
      <option>
        Percent
      </option>
      <option>
        Absolute
      </option>
    </select>
  </label>
  <label
    className="input"
  >
    Answer
    <input
      className="input-item"
      contentEditable={false}
      name="answer"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      value=""
    />
  </label>
  <label
    className="input"
  >
    Margin
    <input
      className="input-item"
      contentEditable={false}
      name="margin"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      value=""
    />
  </label>
</div>
`;

exports[`NumericOption NumericOption renders as expected with requirement of \`precise\` 1`] = `
<div>
  <label
    className="select"
  >
    Requirement
    <select
      className="select-item"
      name="requirement"
      onClick={[Function]}
    >
      <option>
        Exact answer
      </option>
      <option>
        Margin of error
      </option>
      <option>
        Within a range
      </option>
    </select>
  </label>
  <label
    className="input"
  >
    Answer
    <input
      className="input-item"
      contentEditable={false}
      name="answer"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      value=""
    />
  </label>
</div>
`;

exports[`NumericOption NumericOption renders as expected with requirement of \`range\` 1`] = `
<div>
  <label
    className="select"
  >
    Requirement
    <select
      className="select-item"
      name="requirement"
      onClick={[Function]}
      value="Within a range"
    >
      <option>
        Exact answer
      </option>
      <option>
        Margin of error
      </option>
      <option>
        Within a range
      </option>
    </select>
  </label>
  <label
    className="input"
  >
    Start
    <input
      className="input-item"
      contentEditable={false}
      name="start"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      value=""
    />
  </label>
  <label
    className="input"
  >
    End
    <input
      className="input-item"
      contentEditable={false}
      name="end"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      value=""
    />
  </label>
</div>
`;

exports[`NumericOption NumericOption with requirement of \`exact\`, event.stopPropagation() is called when click 1`] = `"<div><label class=\\"select\\">Requirement<select class=\\"select-item\\" name=\\"requirement\\"><option>Exact answer</option><option>Margin of error</option><option>Within a range</option></select></label><label class=\\"input\\">Answer<input class=\\"input-item\\" name=\\"answer\\" contenteditable=\\"false\\" value=\\"\\"></label></div>"`;

exports[`NumericOption NumericOption with requirement of \`margin\`, event.stopPropagation() is called when click 1`] = `"<div><label class=\\"select\\">Requirement<select class=\\"select-item\\" name=\\"requirement\\"><option>Exact answer</option><option>Margin of error</option><option>Within a range</option></select></label><label class=\\"select\\">Type<select class=\\"select-item\\" name=\\"type\\"><option>Percent</option><option>Absolute</option></select></label><label class=\\"input\\">Answer<input class=\\"input-item\\" name=\\"answer\\" contenteditable=\\"false\\" value=\\"\\"></label><label class=\\"input\\">Margin<input class=\\"input-item\\" name=\\"margin\\" contenteditable=\\"false\\" value=\\"\\"></label></div>"`;

exports[`NumericOption NumericOption with requirement of \`precise\`, event.stopPropagation() is called when click 1`] = `"<tr><td><select class=\\"select-item\\" name=\\"requirement\\"><option>Exact answer</option><option>Margin of error</option><option>Within a range</option><option>Precise response</option></select></td><td><select class=\\"select-item\\" name=\\"type\\"><option>Significant digits</option><option>Decimal places</option></select></td><td><input class=\\"input-item\\" name=\\"answer\\" value=\\"\\"></td><td><input class=\\"input-item\\" name=\\"precision\\" value=\\"\\"></td></tr>"`;

exports[`NumericOption NumericOption with requirement of \`range\`, event.stopPropagation() is called when click 1`] = `"<div><label class=\\"select\\">Requirement<select class=\\"select-item\\" name=\\"requirement\\"><option>Exact answer</option><option>Margin of error</option><option>Within a range</option></select></label><label class=\\"input\\">Start<input class=\\"input-item\\" name=\\"start\\" contenteditable=\\"false\\" value=\\"\\"></label><label class=\\"input\\">End<input class=\\"input-item\\" name=\\"end\\" contenteditable=\\"false\\" value=\\"\\"></label></div>"`;
